# SA-Exoscale_fs

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .releaserc  README.md  SECURITY.md  main.py  pyproject.toml  splunkbase_configuration.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/action/: semver.yaml
.github/workflows/: build.yaml  ci.yaml  pr-ci.yaml  pr_release_comment.yaml  release.yaml  sem_rel.yaml  sem_ver.yaml  semver.yaml  setup_repository.yaml  test.yaml  ucc.yaml
SA-Exoscale_fs/: README.md  additional_packaging.py  globalConfig.json
SA-Exoscale_fs/package/: app.manifest
SA-Exoscale_fs/package/LICENSES/: LICENSE.txt
SA-Exoscale_fs/package/default/: app.conf  eventtypes.conf  props.conf  tags.conf  transforms.conf
SA-Exoscale_fs/package/default/data/ui/nav/: default.xml
SA-Exoscale_fs/package/default/data/ui/views/: configuration.xml  dashboard.xml  exoscale_data_overview.xml  inputs.xml
SA-Exoscale_fs/package/lib/: requirements.txt
