[project]
name = "SA-Exoscale_fs"
version = "0.1.0"
description = "FULLSTACKS Add-on for Exoscale"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "exoscale>=0.16.1",
    "solnlib>=8.1.0",
    "splunk-sdk>=2.1.1",
    "splunktaucclib>=8.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.7",
    "splunk-add-on-ucc-framework[validate]>=6.5",
    "pip>=26.0.0",
    "pytest>=8.0.0",
    "yamllint>=1.36.0",
]

[pytest]
minversion = "6.0.0x"
addopts = ["-ra", "-q"]
testpaths = [
    "SA-Exoscale_fs/package/bin",
]
