[project]
name = "SA-Exoscale_fs"
version = "0.1.0"
description = "FULLSTACKS Add-on for Exoscale"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exoscale==0.16.3",
    "solnlib==8.1.0",
    "splunk-sdk==3.0.0",
    "splunktaucclib==8.2.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "ruff==0.15.19",
    "splunk-add-on-ucc-framework[validate]==6.5.1",
    "pip==26.1.2",
    "pytest>=9.1.1",
    "yamllint>=1.38.0",
]

[pytest]
minversion = "6.0.0x"
addopts = ["-ra", "-q"]
testpaths = [
    "SA-Exoscale_fs/package/bin",
]
